<resources>
    <string name="app_name">Music Player Pro</string>
    <string name="app_name_case">@string/app_name</string>
    <string name="title_name_splash">@string/app_name</string>

    <string name="title_learn">Học</string>
    <string name="title_file">Hồ sơ</string>
    <string name="title_club">Câu lạc bộ</string>
    <string name="title_store">Cửa hàng</string>

    <!--....................................-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Music Player</string>
    <string name="nav_header_subtitle">Lovely Music Experience</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_albums">Albums (0)</string>
    <string name="nav_songs">Songs (0)</string>
    <string name="nav_artist">Artists (0)</string>
    <string name="nav_genres">Genres (0)</string>
    <string name="nav_playlists">Playlists</string>
    <string name="nav_folders">Folders</string>
    <string name="nav_equalizer">Equalizer</string>
    <string name="nav_sleep_timer">Sleep Timer</string>
    <string name="nav_share">Share</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_we_are_social">We are Social!</string>
    <string name="nav_settings">Settings</string>
    <string name="action_sort">Sort</string>
    <string name="action_search">Search</string>
    <string name="permission_granted">Permission granted</string>
    <string name="no_permission_granted">No permission granted</string>
    <string name="title_activity_detail_play_music">DetailPlayMusicActivity</string>
    <string name="rotation_property_name">rotation</string>
    <string name="empty_string" />
    <string name="unknown">Unknown</string>
    <string name="service_channel">Service Channel</string>
    <string name="tracks">\u0020tracks |\u0020</string>
    <string name="tracks_without_separator">\u0020tracks\u0020</string>
    <string name="track">\u0020track |\u0020</string>
    <string name="track_without_separator">\u0020track\u0020</string>
    <string name="albums">\u0020albums</string>
    <string name="album">\u0020album</string>
    <string name="library">Library</string>

    <string name="song_list_updated">Song List Updated</string>
    <string name="album_list_updated">Album List Updated</string>
    <string name="artist_list_updated">Artist List Updated</string>
    <string name="genre_list_updated">Genre List Updated</string>
    <string name="playlist_list_updated">Playlist List Updated</string>

    <string name="app_version_number">1.0</string>
    <string name="menu_settings">Settings</string>

    <string name="cd_repeat">Repeat one or all</string>
    <string name="cd_previous">Skip backwards</string>
    <string name="cd_play">Play and pause</string>
    <string name="cd_next">Skip forwards</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Unknown"><![CDATA[<Unknown>]]></string>
    <string name="add_song_completed">Add song completed</string>
    <string name="add_song_failed">Add song failed</string>
    <string name="time_count_text">0:00:00</string>
    <string name="speech_prompt">Say something that you want to search</string>
    <string name="speech_not_supported">Sorry! Your device doesn\\\'t support speech input or speech input feature is disabled</string>
    <string name="offline_music">Offline Music</string>
    <string name="online_music">Online Music</string>
    <string name="folder_list_updated">Folder List Updated</string>
    <string name="zero_number">0</string>
    <string name="title_activity_detail_play_mv">DetailPlayMvActivity</string>
    <string name="title_activity_choose_theme">ChooseThemeActivity</string>
    <string name="zero">0</string>
</resources>
